# clerk

./: CMakeLists.txt  README.md
src/: console.hpp  parameter_processor.hpp  postprocessor_operations.cpp  postprocessor_operations.hpp
src/include/clerk/: clerk.hpp
tests/test0/: CMakeLists.txt
tests/test0/src/: main.cpp
